fix undeline issue on iphone

--- a/style.css
+++ b/style.css
@@ -99,13 +99,13 @@ body{
 
 #bio button{
     width: 80%;
-    text-decoration: underline #00B4FF;
+    text-decoration: underline solid #00B4FF;
     text-decoration-color: #00B4FF;
 
     -webkit-text-decoration: underline solid #00B4FF;
     -webkit-text-decoration-color: #00B4FF;
     text-underline-offset: 8px;
-    height: 20px;
+    height: 28px;
 }
 
 #bio button:hover{
